--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-seo": "^6.6.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
