--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^11.2.10",
     "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.5",
+    "katex": "^0.16.20",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-seo": "^6.6.0",
@@ -36,8 +37,10 @@
     "react-dom": "^18",
     "react-email": "^3.0.4",
     "react-markdown": "^9.0.1",
+    "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.13.2",
     "rehype-stringify": "^10.0.0",
+    "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
     "resend": "^4.0.1",
