add shadcnui charts for admin visualization

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "cookie": "^1.0.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.2.10",
     "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.5",
@@ -47,6 +48,7 @@
     "react-dom": "^18",
     "react-email": "^3.0.4",
     "react-markdown": "^9.0.1",
+    "recharts": "^2.15.0",
     "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.13.2",
     "rehype-stringify": "^10.0.0",
