--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cmdk": "1.0.0",
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "framer-motion": "^11.2.10",
     "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.5",
